test/invalid/baseline/extattr-empty-ids.txt
Syntax error at line 1 in extattr-empty-ids.widl:
[Exposed=()]
          ^ Expected identifiers but none found
